--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -383,7 +383,7 @@ ul.task-list input[type="checkbox"] {
 
   .contact-icons {
     font-size: 4rem;
-
+    width: 5px;
     a {
       i::before {
         color: var(--global-text-color);
