--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -382,7 +382,7 @@ ul.task-list input[type="checkbox"] {
   text-align: center;
 
   .contact-icons {
-    font-size: 0.1rem;
+    font-size: 30px;
     a {
       i::before {
         color: var(--global-text-color);
