--- a/_includes/header.liquid
+++ b/_includes/header.liquid
@@ -107,6 +107,14 @@
               {% endif %}
             {% endif %}
           {% endfor %}
+          <!-- Toogle language -->
+          <li class="nav-item active">
+            {% if site.lang == 'cn' %}
+              <a class="nav-link" href="{{site.baseurl_root}}/cn{{page.url}}"> 中文 </a>
+            {% elsif site.lang == 'en' %}
+              <a class="nav-link" href="{{site.baseurl_root}}{{page.url}}"> EN </a>
+            {% endif %}
+          </li>
           {% if site.enable_darkmode %}
             <!-- Toogle theme mode -->
             <li class="toggle-container">
