--- a/_includes/header.liquid
+++ b/_includes/header.liquid
@@ -109,9 +109,9 @@
           {% endfor %}
           <!-- Toogle language -->
           <li class="nav-item active">
-            {% if site.lang == 'cn' %}
+            {% if site.lang == 'en' %}
               <a class="nav-link" href="{{site.baseurl_root}}/cn{{page.url}}"> 中文 </a>
-            {% elsif site.lang == 'en' %}
+            {% elsif site.lang == 'cn' %}
               <a class="nav-link" href="{{site.baseurl_root}}{{page.url}}"> EN </a>
             {% endif %}
           </li>
