--- a/_includes/header.liquid
+++ b/_includes/header.liquid
@@ -88,7 +88,7 @@
                         <div class="dropdown-divider"></div>
                       {% else %}
                         <a class="dropdown-item {% if page.title == child.title %}active{% endif %}" href="{{ child.permalink | relative_url }}">
-                          {{- child.title -}}
+                          {% t child.title %}
                         </a>
                       {% endif %}
                     {% endfor %}
@@ -98,7 +98,7 @@
                 <li class="nav-item {% if page.url contains p.permalink %}active{% endif %}">
                   {% if p.permalink contains '/blog/' %}{% assign url = '/blog/' %} {% else %}{% assign url = p.url %}{% endif %}
                   <a class="nav-link" href="{{ url | relative_url }}">
-                    {{- p.title }}
+                    {% t p.title %}
                     {% if page.url contains p.url %}
                       <span class="sr-only">(current)</span>
                     {% endif %}
