--- a/_includes/header.liquid
+++ b/_includes/header.liquid
@@ -48,8 +48,8 @@
 
           <!-- About -->
           <li class="nav-item {% if page.permalink == '/' %}active{% endif %}">
-            <a class="nav-link" href="{{ '/' | relative_url }}">
-              {{- about_title }}
+            <a class="nav-link" href="{{ '/' | prepend: site.baseurl }}">
+              {% t about_title %}
               {% if page.permalink == '/' %}
                 <span class="sr-only">(current)</span>
               {% endif %}
@@ -87,7 +87,10 @@
                       {% if child.title == 'divider' %}
                         <div class="dropdown-divider"></div>
                       {% else %}
-                        <a class="dropdown-item {% if page.title == child.title %}active{% endif %}" href="{{ child.permalink | relative_url }}">
+                        <a
+                          class="dropdown-item {% if page.title == child.title %}active{% endif %}"
+                          href="{{ child.permalink | prepend: site.baseurl }}"
+                        >
                           {% t child.title %}
                         </a>
                       {% endif %}
@@ -97,7 +100,7 @@
               {% else %}
                 <li class="nav-item {% if page.url contains p.permalink %}active{% endif %}">
                   {% if p.permalink contains '/blog/' %}{% assign url = '/blog/' %} {% else %}{% assign url = p.url %}{% endif %}
-                  <a class="nav-link" href="{{ url | relative_url }}">
+                  <a class="nav-link" href="{{ url | prepend: site.baseurl }}">
                     {% t p.title %}
                     {% if page.url contains p.url %}
                       <span class="sr-only">(current)</span>
