--- a/_includes/metadata.liquid
+++ b/_includes/metadata.liquid
@@ -27,16 +27,16 @@
     {% capture title %}{{ site.title }}{% endcapture %}
   {% endif %}
   {% if page.url == '/blog/index.html' %}
+    {{ site.blog_nav_title }} | {{ title }}
+  {% elsif page.url contains '/blog/' %}
     {{ page.title }} | {{ title }}
-  {% elsif page.title != 'blank' and page.url != '/' %}
-    {% if page.title == null or page.title == '' %}
-      {{ page.date | date: '%Y' }} | {{ title }}
-    {% else %}
-      {{ page.title }} | {{ title }}
-    {% endif %}
-  {% else %}
+  {%- elsif page.title contains 'Announcement' -%}
     {{ title }}
-  {% endif %}
+  {%- elsif page.title != 'blank' and page.url != '/' -%}
+    {% t page.title %} | {{ title }}
+  {%- else -%}
+    {{ title }}
+  {%- endif -%}
 </title>
 <meta name="author" content="{{ author_name }}">
 <meta name="description" content="{% if page.description %}{{ page.description }}{% else %}{{ site.description }}{% endif %}">
