--- a/_layouts/about.liquid
+++ b/_layouts/about.liquid
@@ -51,7 +51,7 @@ layout: default
     <!-- News -->
     {% if page.news and site.announcements.enabled %}
       <h2>
-        <a href="{{ '/news/' | relative_url }}" style="color: inherit">news</a>
+        <a href="{{ '/news/' | relative_url }}" style="color: inherit">% t titles.news %</a>
       </h2>
       {% include news.liquid limit=true %}
     {% endif %}
