--- a/_layouts/about.liquid
+++ b/_layouts/about.liquid
@@ -51,7 +51,11 @@ layout: default
     <!-- News -->
     {% if page.news and site.announcements.enabled %}
       <h2>
-        <a href="{{ '/news/' | relative_url }}" style="color: inherit">% t titles.news %</a>
+        {% if site.lang == 'en' %}
+          <a href="{{ '/news/' | relative_url }}" style="color: inherit">News</a>
+        {% elsif site.lang == 'cn' %}
+          <a href="{{ '/news/' | relative_url }}" style="color: inherit">新闻</a>
+        {% endif %}
       </h2>
       {% include news.liquid limit=true %}
     {% endif %}
@@ -59,7 +63,11 @@ layout: default
     <!-- Latest posts -->
     {% if site.latest_posts.enabled %}
       <h2>
-        <a href="{{ '/blog/' | relative_url }}" style="color: inherit">latest posts</a>
+        {% if site.lang == 'en' %}
+          <a href="{{ '/blog/' | relative_url }}" style="color: inherit">Latest Posts</a>
+        {% elsif site.lang == 'cn' %}
+          <a href="{{ '/blog/' | relative_url }}" style="color: inherit">最新 Posts</a>
+        {% endif %}
       </h2>
       {% include latest_posts.liquid %}
     {% endif %}
@@ -67,7 +75,11 @@ layout: default
     <!-- Selected papers -->
     {% if page.selected_papers %}
       <h2>
-        <a href="{{ '/publications/' | relative_url }}" style="color: inherit">selected publications</a>
+        {% if site.lang == 'en' %}
+          <a href="{{ '/publications/' | relative_url }}" style="color: inherit">Selected Publications</a>
+        {% elsif site.lang == 'cn' %}
+          <a href="{{ '/publications/' | relative_url }}" style="color: inherit">精选论文/a>
+        {% endif %}
       </h2>
       {% include selected_papers.liquid %}
     {% endif %}
