--- a/_layouts/about.liquid
+++ b/_layouts/about.liquid
@@ -83,5 +83,17 @@ layout: default
       </h2>
       {% include selected_papers.liquid %}
     {% endif %}
+
+    <!-- Education -->
+    {% if page.education %}
+      <h2>
+        {% if site.lang == 'en' %}
+          <a href="{{ '/education/' | relative_url }}" style="color: inherit">Education</a>
+        {% elsif site.lang == 'cn' %}
+          <a href="{{ '/education/' | relative_url }}" style="color: inherit">教育经历</a>
+        {% endif %}
+      </h2>
+      {% include resume/education.liquid %}
+    {% endif %}
   </article>
 </div>
