try larger image

--- a/_layouts/about.liquid
+++ b/_layouts/about.liquid
@@ -78,7 +78,7 @@ layout: default
         {% if site.lang == 'en' %}
           <a href="{{ '/publications/' | relative_url }}" style="color: inherit">Selected Publications</a>
         {% elsif site.lang == 'cn' %}
-          <a href="{{ '/publications/' | relative_url }}" style="color: inherit">精选论文</a>
+          <a href="{{ '/publications/' | relative_url }}" style="color: inherit">代表作</a>
         {% endif %}
       </h2>
       {% include selected_papers.liquid %}
