--- a/_layouts/about.liquid
+++ b/_layouts/about.liquid
@@ -87,7 +87,7 @@ layout: default
     {% if page.full_list %}
       <h2>
         {% if site.lang == 'en' %}
-          <a href="{{ '/publications/' | relative_url }}" style="color: inherit">Full list</a>
+          <a href="{{ '/publications/' | relative_url }}" style="color: inherit">Full List</a>
         {% elsif site.lang == 'cn' %}
           <a href="{{ '/publications/' | relative_url }}" style="color: inherit">所有论文</a>
         {% endif %}
