--- a/_layouts/about.liquid
+++ b/_layouts/about.liquid
@@ -103,7 +103,7 @@ layout: default
           <a href="{{ '/education/' | relative_url }}" style="color: inherit">教育经历</a>
         {% endif %}
       </h2>
-      {% include resume/education.liquid %}
+      {% include education.liquid %}
     {% endif %}
   </article>
 </div>
