--- a/_layouts/about.liquid
+++ b/_layouts/about.liquid
@@ -48,22 +48,27 @@ layout: default
 
     <div class="clearfix">
       {{ content }}
-      <h2>Interests</h2>
-      <ul>
-        {% for interest in page.interests %}
-          <li>{{ interest }}</li>
-        {% endfor %}
-      </ul>
-
-      <h2>Education</h2>
-      <ul>
-        {% for education in page.education %}
-          <li>
-            {{ education.degree }} ({{ education.year }}) <br>
-            {{ education.university }}, {{ education.country }}
-          </li>
-        {% endfor %}
-      </ul>
+      <div class="row">
+        <div class="column">
+          <h2>Interests</h2>
+          <ul>
+            {% for interest in page.interests %}
+              <li>{{ interest }}</li>
+            {% endfor %}
+          </ul>
+        </div>
+        <div class="column">
+          <h2>Education</h2>
+          <ul>
+            {% for education in page.education %}
+              <li>
+                {{ education.degree }} ({{ education.year }}) <br>
+                {{ education.university }}, {{ education.country }}
+              </li>
+            {% endfor %}
+          </ul>
+        </div>
+      </div>
     </div>
 
     <!-- Education -->
